organizando algumas intefaces