@@ -15,14 +15,20 @@
 
     <dependencies>
         <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-controls</artifactId>
-          <version>17</version>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx</artifactId>
+            <version>1.12.0</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>17</version>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-backend-lwjgl3</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-platform</artifactId>
+            <version>1.12.0</version>
+            <classifier>natives-desktop</classifier>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -32,43 +38,19 @@
         </dependency>
     </dependencies>
 
+
+
     <build>
         <plugins>
-            <!-- Plugin para compilar o projeto -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <version>3.0.0</version>
-              <configuration>
-                  <mainClass>com.bytecrash.App</mainClass>
-                  <arguments>
-                      <argument>--module-path</argument>
-                      <argument>${javafx.sdk.path}</argument>
-                      <argument>--add-modules</argument>
-                      <argument>javafx.controls,javafx.fxml</argument>
-                  </arguments>
-              </configuration>
-            </plugin>
-
-            <!-- Plugin para executar o projeto -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.0.0</version>
                 <configuration>
-                    <mainClass>com.bytecrash.App</mainClass>
+                    <mainClass>com.bytecrash.DesktopLauncher</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
 </project>
